Weather app Customized and Api integration.

--- a/app/styles/layout.module.css
+++ b/app/styles/layout.module.css
@@ -15,6 +15,12 @@
   pointer-events: none;
 }
 
+.cloud {
+  height: 40vmin;
+  pointer-events: none;
+  color:#fff
+}
+
 .header {
   grid-area: header;
 }
