--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 html,
 body {
   min-height: 100vh;
@@ -6,6 +8,12 @@ body {
   font-family: system-ui, sans-serif;
 }
 
+body {
+    color: #fff;
+    background: #000;
+}
+
+
 a {
   color: inherit;
   text-decoration: none;
@@ -13,4 +21,25 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+
+.weather-container {
+  width: 90%
+}
+
+.chart-labels {
+  fill: white;
+}
+
+.MuiChartsAxis-tickLabel {
+  /* fill: white !important; */
+}
+
+.weather-tiles {
+  align-self: center;
+}
+
+.align-center {
+  align-content: center;
 }
